; ModuleID = '/home/carl/AnghaBench/libgit2/tests/submodule/extr_modify.c_test_submodule_modify__set_url.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/submodule/extr_modify.c_test_submodule_modify__set_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"sm_changed_head\00", align 1
@SM_LIBGIT2_URL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_submodule_modify__set_url() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @g_repo, align 4
  %3 = load i32, i32* @SM_LIBGIT2_URL, align 4
  %4 = call i32 @git_submodule_set_url(i32 %2, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %3)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @g_repo, align 4
  %7 = call i32 @git_submodule_lookup(i32** %1, i32 %6, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @SM_LIBGIT2_URL, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_submodule_url(i32* %10)
  %12 = call i32 @cl_assert_equal_s(i32 %9, i32 %11)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @git_submodule_free(i32* %13)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_submodule_set_url(i32, i8*, i32) #1

declare dso_local i32 @git_submodule_lookup(i32**, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i32) #1

declare dso_local i32 @git_submodule_url(i32*) #1

declare dso_local i32 @git_submodule_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
